[daemon] Owner assignment and owner daemon version query initial code; let daemon become a Fat Jar again.